# llm-multi-agent-system

./: .env.example  .gitignore  .langgraph-implementation-manifest.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CURSOR_CLI_CLEANUP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW_SUMMARY.md  DOCUMENTATION_UPDATES.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_README.md  GET_STARTED_WITH_CHAT.md  IMPROVEMENTS_COMPLETED.md  INTERACTIVE_CHAT_UPDATE.md  LANGGRAPH_IMPLEMENTATION_SUMMARY.md  LANGGRAPH_QUICK_START.md  LANGGRAPH_README.md  LICENSE  PLAN_TODAY.md  PRODUCTION_READY_CHECKLIST.md  PYTHON_3.12_MIGRATION_COMPLETE.md  PYTHON_VERSION_COMPATIBILITY.md  QUICK_START.md  README.md  SCRIPT_IMPROVEMENTS_SUMMARY.md  SETUP_COMPLETE.md  START_FRONTEND_MOCK.md  VERIFICATION_REPORT.md  alembic.docker.ini  alembic.ini  config.docker.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_agent.py  test_all_formats.py  (+4 more)
alembic/: env.py
docs/: AGENT_COLLABORATION_PROTOCOL.md  AGENT_SPECS.md  API_REFERENCE.md  ARCHITECTURE.md  BACKEND_INTEGRATION_PLAN.md  BRAINSTORMING.md  BUG_FIX_UNDEFINED_RESULT.md  CHANGELOG.md  CHAT_EXAMPLES.md  CHAT_QUICK_REFERENCE.md  CLEANUP_SUMMARY.md  COLLABORATION_ANALYSIS_2026-01-10.md  CONTEXT_SIZE_HANDLING.md  CONTRIBUTING.md  CURSOR_AGENT_SDK.md  CURSOR_CLI_ORCHESTRATION.md  DEPLOYMENT.md  FILE_PARSER_VERIFICATION.md  FRONTEND_SETUP.md  GETTING_STARTED_PYTHON_3.12.md  GET_STARTED_WITH_CHAT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_COMPLETED.md  INTEGRATIONS.md  INTERACTIVE_CHAT.md  (+27 more)
src/: config.py  (+1 more)
(+307 files in other folders)
